# code-buddy

./: .depcheckrc.json  .env.example  .gitattributes  .gitignore  ACTION-PLAN-2025-12-09.md  ACTION-PLAN-MODERNIZATION.md  AGENTS.md  AUDIT-2025-12-14.md  AUDIT-2026-01-11.md  AUDIT-2026-02-27.md  AUDIT-2026-05-29.md  AUDIT-QUALITY-2025-12-09.md  AUDIT_REPORT.md  AUTOPILOT-STATE.md  CHANGELOG.md  CLAUDE.md  CODEX-BRIEF-QUEUE.md  CODEX-CONVENTIONS.md  COLAB.md  CORE-AGENT-TOOLS-BRIEF.md  COWORK-AGENTIC-OS-BRIEF.md  COWORK-APP-STUDIO-BRIEF.md  COWORK-GENSPARK-BRIEF-2.md  COWORK-GENSPARK-BRIEF.md  ETUDE-AUTO-RECOLTE-MEMOIRE.md  ETUDE-PERCEPTION-MONDE-PHYSIQUE.md  ETUDE-RTK-VS-LM-RESIZER.md  GEMINI.md  MEMORY.md  README.md  SMOKE-TEST-2026-05-29.md  TODO.md  audit-allowlist.json  eslint.config.js  fix-imports.cjs  fix-test.cjs  jest.config.cjs  package-lock.json  package.json  run.sh  (+6 more)
.codebuddy/: AUDIT-REPORT.md  CODEBUDDY.md  CODEBUDDY_MEMORY.md  GROK.md  HEARTBEAT.md  PROJECT_KNOWLEDGE.md  README.md  SOUL.md  TOOLS.md  USER.md  autonomy.json  code-graph.json  hooks.json  lessons.md  mcp.json  repoProfile.json  security.json  settings.json  webhooks.json
.omx/: notepad.md
buddy-sense/: Cargo.toml  README.md  demo.sh
buddy-sense/src/: bridge.rs  bus.rs  event.rs  main.rs  organs.rs
buddy-sense/src/senses/: audio.rs  live_audio.rs  mod.rs  screen.rs  stt.rs  ui.rs  video.rs  vital.rs
buddy-vision/: .gitignore  README.md  camera_health.py  detectors.py  setup.sh  storage.py  test_camera_health.py  test_detectors.py  test_storage.py  test_watch.py  watch.py
cowork/: .gitignore  12 commits — nuit autopilote Fable du 6 juillet.xlsx  ARCHITECTURE.md  CHANGELOG.md  DEV-LINUX.md  README.md  README_zh.md  RUNNER_AUDIT.md  electron-builder.yml  index.html  package-lock.json  package.json  readme.md  vite.config.ts  vitest.config.mts
docker/: workspace-sandbox.Dockerfile
docs/: AUDIT_COMPLET.md  AUDIT_DOCUMENTATION.md  CAHIER_DE_TESTS.md  FAQ.md  MISSING_FEATURES_AUDIT.md  MISSION-ORCHESTRATOR-PHASE1-PLAN.md  OPENCLAW_INTEGRATION.md  RESEARCH_IMPROVEMENTS.md  UI-IMPROVEMENTS-2025-12-12.md  acp-editor-integration.md  agentic-coding-cell.md  agents.md  application-validation-guide.md  architecture.md  avatar-metahuman-protocol.md  book-trailer-pipeline.md  channel-a2a-bridge.md  channels.md  cinematic-trailer-production.md  code-buddy-2.0.md  code-buddy-hermes-gap-analysis.md  code-buddy-hermes-gap-audit-2026-05-24.md  code-explorer-integration.md  cognitive-mesh.md  comfyui-lab.md  comfyui-use-cases.md  commands.md  companion-guide.md  configuration.md  context-engine.md  cowork-alignment-audit-2026-06-10.md  cowork-competitor-audit.md  cowork-continuity-fabric.md  cowork-guide-fr.md  cowork-pilotability-matrix.md  cowork-user-guide.md  cowork.md  darkstar-lora.md  darkstar-max-use.md  deployment.md  (+40 more)
eval/: run-task.mjs
prompts/: architect.md  code-reviewer.md  default.md  minimal.md  secure.md
queue/: 10-app-studio-v2.md  11-agentic-os-v2.md  12-core-tools-v2.md  13-dataviz.md  20-studio-functional.md  21-os-live-data.md  22-studio-templates.md  23-design-system-tool.md  24-studio-design-systems.md  25-color-tokens-sweep.md  26-scaffold-tests.md  27-viz-components.md  28-os-panels.md  29-deliverable-previews.md  30-csv-tool.md  31-websearch-tests.md  (+7 more)
src-sidecar/: Cargo.toml
src-sidecar/src/: desktop.rs  main.rs  stt.rs
(+4874 files in other folders)
