[package]
name = "buddy-sense"
version = "0.1.0"
edition = "2021"
description = "A parallel multi-sensory nervous system feeding Code Buddy"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"

# Live screen capture is opt-in (xcap, X11/Wayland). The pure change detector
# builds + tests without it.
xcap = { version = "0.0.14", optional = true }
# Neural VAD (Silero via ONNX Runtime) is opt-in — ort auto-downloads onnxruntime
# at build; the energy-RMS VAD remains the default fallback.
# default-features off drops the `helpers` feature (libsamplerate/ebur128 C deps);
# we feed 16 kHz mono directly, no resampling needed.
vad-rs = { version = "0.1.4", optional = true, default-features = false }
# ort (ONNX Runtime) comes via vad-rs; pin it here only to enable a TLS backend so
# its download-binaries strategy can fetch onnxruntime at build (no system install).
ort = { version = "=2.0.0-rc.6", optional = true, features = ["load-dynamic"] }
# Pin ort-sys to match ort rc.6 (cargo otherwise resolves an incompatible rc.10).
ort-sys = { version = "=2.0.0-rc.6", optional = true }

# Live UI sense via AT-SPI (accessibility). zbus is pure-Rust D-Bus → no system
# deps. The pure mapper builds + tests without it.
atspi = { version = "0.30", optional = true, features = ["tokio"] }
tokio-stream = { version = "0.1", optional = true }

[features]
default = []
# Live camera sense via ffmpeg (v4l2) — no extra crate, uses the system ffmpeg.
# The pure motion detector builds + tests without it.
live-vision = []
live-screen = ["dep:xcap"]
neural-vad = ["dep:vad-rs", "dep:ort", "dep:ort-sys"]
live-ui = ["dep:atspi", "dep:tokio-stream"]
