[package]
name = "codebuddy-sidecar"
version = "0.1.0"
edition = "2021"
description = "Native Rust sidecar for Code Buddy — local Whisper STT + desktop automation"

[[bin]]
name = "codebuddy-sidecar"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.13"
hound = "3.5"
arboard = "3"
enigo = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
